--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             >Web<span class="header-logo-span">Studio</span></a
           >
           <ul class="header-list list">
-            <li><a href="./index.html" class="header-link link">Studio</a></li>
+            <li>
+              <a href="./index.html" class="header-link link current">Studio</a>
+            </li>
             <li><a href="" class="header-link link">Portfolio</a></li>
             <li><a href="" class="header-link link">Contacts</a></li>
           </ul>
@@ -75,6 +77,16 @@
           <h2 class="visually-hidden">Values</h2>
           <ul class="values-list list">
             <li class="values-block">
+              <div class="values-icons">
+                <svg
+                  classs="values-icon"
+                  viewBox="0 0 32 32"
+                  width="64"
+                  height="64"
+                >
+                  <use href="./images/symbol-defs-opt.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="values-item">Strategy</h3>
               <p class="values-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -82,6 +94,16 @@
               </p>
             </li>
             <li class="values-block">
+              <div class="values-icons">
+                <svg
+                  classs="values-icon"
+                  viewBox="0 0 32 32"
+                  width="64"
+                  height="64"
+                >
+                  <use href="./images/symbol-defs-opt.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="values-item">Punctuality</h3>
               <p class="values-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -89,6 +111,16 @@
               </p>
             </li>
             <li class="values-block">
+              <div class="values-icons">
+                <svg
+                  classs="values-icon"
+                  viewBox="0 0 32 32"
+                  width="64"
+                  height="64"
+                >
+                  <use href="./images/symbol-defs-opt.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="values-item">Diligence</h3>
               <p class="values-item-text">
                 Research and confirm brands with the strongest digital growth
@@ -96,6 +128,16 @@
               </p>
             </li>
             <li class="values-block">
+              <div class="values-icons">
+                <svg
+                  classs="values-icon"
+                  viewBox="0 0 32 32"
+                  width="64"
+                  height="64"
+                >
+                  <use href="./images/symbol-defs-opt.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="values-item">Technologies</h3>
               <p class="values-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -121,6 +163,44 @@
               <div class="team-text">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-job-title">Product Designer</p>
+                <ul class="team-social-list list">
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-opt.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -133,6 +213,44 @@
               <div class="team-text">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-job-title">Frontend Developer</p>
+                <ul class="team-social-list list">
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-opt.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -145,6 +263,44 @@
               <div class="team-text">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-job-title">Marketing</p>
+                <ul class="team-social-list list">
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-opt.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -157,6 +313,44 @@
               <div class="team-text">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-job-title">UI Designer</p>
+                <ul class="team-social-list list">
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href="./images/symbol-defs-opt.svg#icon-twitter"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="team-social-list-icon" width="16" height="16">
+                        <use
+                          href=".//images/symbol-defs-opt.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -169,72 +363,114 @@
           <h2 class="title">Our Portfolio</h2>
           <ul class="portfolio-offer list">
             <li class="portfolio-offer-item">
-              <img
-                src="./images/portfolio-pic-1.jpg"
-                alt="Inferface of an banking app"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-pic-text">
+                <img
+                  src="./images/portfolio-pic-1.jpg"
+                  alt="Inferface of an banking app"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-top-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-offer-text">
                 <h3 class="offer-name">Banking App</h3>
                 <p class="offer-type">App</p>
               </div>
             </li>
             <li class="portfolio-offer-item">
-              <img
-                src="./images/portfolio-pic-2.jpg"
-                alt="Process of cashless payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-pic-text">
+                <img
+                  src="./images/portfolio-pic-2.jpg"
+                  alt="Process of cashless payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-top-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-offer-text">
                 <h3 class="offer-name">Cashless Payment</h3>
                 <p class="offer-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-offer-item">
-              <img
-                src="./images/portfolio-pic-3.jpg"
-                alt="Interface of an App on the screens of a computer and a mobile phone"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-pic-text">
+                <img
+                  src="./images/portfolio-pic-3.jpg"
+                  alt="Interface of an App on the screens of a computer and a mobile phone"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-top-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-offer-text">
                 <h3 class="offer-name">Meditation App</h3>
                 <p class="offer-type">App</p>
               </div>
             </li>
             <li class="portfolio-offer-item">
-              <img
-                src="./images/portfolio-pic-4.jpg"
-                alt="Driver's seat in a car"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-pic-text">
+                <img
+                  src="./images/portfolio-pic-4.jpg"
+                  alt="Driver's seat in a car"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-top-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-offer-text">
                 <h3 class="offer-name">Taxi Service</h3>
                 <p class="offer-type">Marketing</p>
               </div>
             </li>
             <li class="portfolio-offer-item">
-              <img
-                src="./images/portfolio-pic-5.jpg"
-                alt="Design of screens of a mobile phone"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-pic-text">
+                <img
+                  src="./images/portfolio-pic-5.jpg"
+                  alt="Design of screens of a mobile phone"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-top-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-offer-text">
                 <h3 class="offer-name">Screen Illustrations</h3>
                 <p class="offer-type">Design</p>
               </div>
             </li>
             <li class="portfolio-offer-item">
-              <img
-                src="./images/portfolio-pic-6.jpg"
-                alt="A smiling lady with a mobile phone"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-pic-text">
+                <img
+                  src="./images/portfolio-pic-6.jpg"
+                  alt="A smiling lady with a mobile phone"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-top-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-offer-text">
                 <h3 class="offer-name">Online Courses</h3>
                 <p class="offer-type">Marketing</p>
@@ -247,14 +483,51 @@
     </main>
     <!-- #region Footer -->
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo link"
-          >Web<span class="footer-logo-span">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-text-container">
+          <a href="./index.html" class="footer-logo link"
+            >Web<span class="footer-logo-span">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-soc-med">
+          <p class="footer-name-icons">Social media</p>
+          <ul class="footer-social-list list">
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-social-list-icon" width="16" height="16">
+                  <use
+                    href=".//images/symbol-defs-opt.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-social-list-icon" width="16" height="16">
+                  <use href="./images/symbol-defs-opt.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-social-list-icon" width="16" height="16">
+                  <use href=".//images/symbol-defs-opt.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-list-item">
+              <a href="" class="footer-social-list-link">
+                <svg class="footer-social-list-icon" width="16" height="16">
+                  <use href=".//images/symbol-defs-opt.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!-- #endregion -->
