--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-instagram"
+                          href="./images/symbol-defs-opt.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -186,7 +186,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-facebook"
+                          href="./images/symbol-defs-opt.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -195,7 +195,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-linkedin"
+                          href="./images/symbol-defs-opt.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -218,7 +218,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-instagram"
+                          href="./images/symbol-defs-opt.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -236,7 +236,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-facebook"
+                          href="./images/symbol-defs-opt.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -245,7 +245,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-linkedin"
+                          href="./images/symbol-defs-opt.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -268,7 +268,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-instagram"
+                          href="./images/symbol-defs-opt.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -286,7 +286,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-facebook"
+                          href="./images/symbol-defs-opt.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -295,7 +295,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-linkedin"
+                          href="./images/symbol-defs-opt.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -318,7 +318,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-instagram"
+                          href="./images/symbol-defs-opt.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -336,7 +336,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-facebook"
+                          href="./images/symbol-defs-opt.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
@@ -345,7 +345,7 @@
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
                         <use
-                          href=".//images/symbol-defs-opt.svg#icon-linkedin"
+                          href="./images/symbol-defs-opt.svg#icon-linkedin"
                         ></use>
                       </svg>
                     </a>
@@ -498,31 +498,29 @@
           <ul class="footer-social-list list">
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
-                <svg class="footer-social-list-icon" width="16" height="16">
-                  <use
-                    href=".//images/symbol-defs-opt.svg#icon-instagram"
-                  ></use>
+                <svg class="footer-social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-opt.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
-                <svg class="footer-social-list-icon" width="16" height="16">
+                <svg class="footer-social-list-icon" width="24" height="24">
                   <use href="./images/symbol-defs-opt.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
-                <svg class="footer-social-list-icon" width="16" height="16">
-                  <use href=".//images/symbol-defs-opt.svg#icon-facebook"></use>
+                <svg class="footer-social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-opt.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
-                <svg class="footer-social-list-icon" width="16" height="16">
-                  <use href=".//images/symbol-defs-opt.svg#icon-linkedin"></use>
+                <svg class="footer-social-list-icon" width="24" height="24">
+                  <use href="./images/symbol-defs-opt.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
