--- a/index.html
+++ b/index.html
@@ -78,12 +78,7 @@
           <ul class="values-list list">
             <li class="values-block">
               <div class="values-icons">
-                <svg
-                  classs="values-icon"
-                  viewBox="0 0 32 32"
-                  width="64"
-                  height="64"
-                >
+                <svg viewBox="0 0 32 32" width="64" height="64">
                   <use href="./images/symbol-defs-opt.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -95,12 +90,7 @@
             </li>
             <li class="values-block">
               <div class="values-icons">
-                <svg
-                  classs="values-icon"
-                  viewBox="0 0 32 32"
-                  width="64"
-                  height="64"
-                >
+                <svg viewBox="0 0 32 32" width="64" height="64">
                   <use href="./images/symbol-defs-opt.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -112,12 +102,7 @@
             </li>
             <li class="values-block">
               <div class="values-icons">
-                <svg
-                  classs="values-icon"
-                  viewBox="0 0 32 32"
-                  width="64"
-                  height="64"
-                >
+                <svg viewBox="0 0 32 32" width="64" height="64">
                   <use href="./images/symbol-defs-opt.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -129,12 +114,7 @@
             </li>
             <li class="values-block">
               <div class="values-icons">
-                <svg
-                  classs="values-icon"
-                  viewBox="0 0 32 32"
-                  width="64"
-                  height="64"
-                >
+                <svg viewBox="0 0 32 32" width="64" height="64">
                   <use href="./images/symbol-defs-opt.svg#icon-astronaut"></use>
                 </svg>
               </div>
