--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <li class="values-block">
               <div class="values-icons">
                 <svg viewBox="0 0 32 32" width="64" height="64">
-                  <use href="./images/symbol-defs-opt.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="values-item">Strategy</h3>
@@ -91,7 +91,7 @@
             <li class="values-block">
               <div class="values-icons">
                 <svg viewBox="0 0 32 32" width="64" height="64">
-                  <use href="./images/symbol-defs-opt.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="values-item">Punctuality</h3>
@@ -103,7 +103,7 @@
             <li class="values-block">
               <div class="values-icons">
                 <svg viewBox="0 0 32 32" width="64" height="64">
-                  <use href="./images/symbol-defs-opt.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="values-item">Diligence</h3>
@@ -115,7 +115,7 @@
             <li class="values-block">
               <div class="values-icons">
                 <svg viewBox="0 0 32 32" width="64" height="64">
-                  <use href="./images/symbol-defs-opt.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="values-item">Technologies</h3>
@@ -147,36 +147,28 @@
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-twitter"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -197,36 +189,28 @@
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-twitter"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -247,36 +231,28 @@
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-twitter"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -297,36 +273,28 @@
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-twitter"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="team-social-list-icon" width="16" height="16">
-                        <use
-                          href="./images/symbol-defs-opt.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -479,28 +447,28 @@
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
                 <svg class="footer-social-list-icon" width="24" height="24">
-                  <use href="./images/symbol-defs-opt.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
                 <svg class="footer-social-list-icon" width="24" height="24">
-                  <use href="./images/symbol-defs-opt.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
                 <svg class="footer-social-list-icon" width="24" height="24">
-                  <use href="./images/symbol-defs-opt.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
               <a href="" class="footer-social-list-link">
                 <svg class="footer-social-list-icon" width="24" height="24">
-                  <use href="./images/symbol-defs-opt.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
